fix: harden generic group answer boundaries